# cicd

./: CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build_and_test_cedar_linux_x86_64_gcc_ompi.yml  build_coverage.yml  ci.yml  ci_linux_x86_64.yml  comment_pr.yml  coverage.yml  coverage_report.yml  lcov_code_coverage_report.yml  lcov_reporter_action.yml  report_lcov.yml  test_coverage.yml
cmake/: coverage.cmake
src/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt  math.cpp  math.hpp
tests/unittests/: CMakeLists.txt  test_math.cpp
